force-app/main/default/objects/Project_Technology__c/fields/Experience_Description__c.field-meta.xml
<CustomField>
    <fullName>Experience_Description__c</fullName>
    <label>Experience Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>