force-app/main/default/objects/Project_Technology__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <description>master-detail relation</description>
    <label>Technology</label>
    <referenceTo>Technology__c</referenceTo>
    <relationshipLabel>Project Technologies</relationshipLabel>
    <relationshipName>Project_Technologies</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>